docs(security,troubleshooting): commit pending Round 3 audit + runtime bug log
These two docs were modified in a prior session and left uncommitted in
the working tree. No code or feature changes — pure documentation:

- docs/SECURITY_AUDIT.md: Round 3 (2026-08-02, local) security audit
  focused on the local filesystem (Anvilcraft RESPALDO/ + working tree
  re-verification post-Round 2). Scope explicitly outside the public
  GitHub repo (closed in Round 2).

- docs/TROUBLESHOOTING.md: New runtime bug entry — session.lock stuck
  preventing Minecraft server restart after closing AnvilCraft, with
  the IOException symptom and the standard workaround.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>